# Workshop-C-attributes-tricky-keywords

./: README.md  inlining.txt  workshop.txt
attributes/: CMakeLists.txt  aligned.c  always_inline.c  const.c  constructor.c  deprecated.c  destructor.c  format.c  format_arg.c  malloc.c  mode.c  noinline.c  noreturn.c  packed.c  pure.c  section.c  unused.c
ex/: CMakeLists.txt  ex01.c  ex03.c  ex05.c
examples/: CMakeLists.txt  ex01.c  ex02.c  ex03.c  ex04.c
exemple/: ex02.c
keywords/: CMakeLists.txt  auto.c  const.c  extern.c  goto.c  inline.c  register.c  restrict.c  union.c  volatile.c
keywords/system/: _Alignas.c  _Alignof.c  _Atomic.c  _Bool.c  _Complex.c  _Generic.c  _Imaginary.c  _Noreturn.c  _Static_assert.c
